force-app/main/default/objects/Meetings__c/Meetings__c.object-meta.xml
<CustomObject>
    <description>Object used to store the information of the different commercial meetings that must be developed for the prospecting of leads or the management of opportunities</description>
    <label>Meetings</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>meeting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>