force-app/main/default/objects/Meetings__c/fields/attendant_1__c.field-meta.xml
<CustomField>
    <fullName>attendant_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendant 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>meetings</relationshipName>
    <type>Lookup</type>
</CustomField>