force-app/main/default/objects/Meetings__c/fields/Attendant_2__c.field-meta.xml
<CustomField>
    <fullName>Attendant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendant 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>