force-app/main/default/objects/Meetings__c/fields/Attendant_3__c.field-meta.xml
<CustomField>
    <fullName>Attendant_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendant 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>meetings2</relationshipName>
    <type>Lookup</type>
</CustomField>