force-app/main/default/objects/Meetings__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <label>Scheduled</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>