force-app/main/default/objects/Meetings__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Deepening</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Success Plan</fullName>
            </value>
            <value>
                <fullName>Shadowing</fullName>
            </value>
            <value>
                <fullName>Kickoff</fullName>
            </value>
            <value>
                <fullName>Configuration review</fullName>
            </value>
            <value>
                <fullName>QBR/EBR</fullName>
            </value>
            <value>
                <fullName>Check Point</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>On Boarding (Customer Succsess)</fullName>
                <isActive>false</isActive>
                <label>On Boarding (Customer Succsess)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>