force-app/main/default/objects/Meetings__c/fields/Year_Created__c.field-meta.xml
<CustomField>
    <fullName>Year_Created__c</fullName>
    <formula>YEAR( DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>