force-app/main/default/objects/Meetings__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <formula>TEXT(Year_Created__c ) &amp; &quot;  &quot;  &amp;    month_created__c</formula>
    <label>Year Month</label>
    <type>Text</type>
</CustomField>