force-app/main/default/objects/Meetings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Notes__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>massumoto</value>
    </filters>
    <label>All</label>
</ListView>