force-app/main/default/objects/Meetings__c/listViews/Vista_de_Juancho.listView-meta.xml
<ListView>
    <fullName>Vista_de_Juancho</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Vista de Juancho</label>
</ListView>